2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Implemented an
	  assembly resolver for the stetic app, so assembly widgets registered
	  with .pc files can be found.
	* MonoDevelop.GtkCore.GuiBuilder/ToolboxLoader.cs: If a widget dll belongs
	  to a package, store it as a package reference in the toolbox index.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Allow setting TargetGtkVersion to
	  DefaultGtkVersion when current value is null.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Don't touch GTK# assembly versions
	  when a target version is not set. Don't use gtkVersion=null to represent
	  default version.
	* MonoDevelop.GtkCore/GtkCoreService.cs: Set TargetGtkVersion on new
	  projects. Bump default version to 2.8.

2007-09-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore.mdp, lib/libsteticui.mdp, lib/libstetic.mdp,
	  lib/Makefile.am, MonoDevelop.GtkCore.mds, Makefile.am: Use projects for
	  imported stetic libraries.

2007-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Removed access to
	  Component object.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Remove unused method.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.Dialogs/SelectRenamedClassDialog.cs,
	  MonoDevelop.GtkCore.Dialogs/WidgetBuilderOptionPanel.cs,
	  MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs,
	  MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs: Fix warnings.

2007-09-13  Michael Hutchinson <mhutchinson@novell.com> 

	* lib/stetic, Makefile.am, lib/Makefile.am: Build stetic from 
	  svn:externals.