@@ -1,3 +1,9 @@
+2007-09-21  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Use ProjectReference.StoredReference
+	  rather than ProjectReference.Reference, in order to refer to the actual
+	  stored reference string rather than a temporarily bumped version.
+
 2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.GtkCore.addin.xml: Bump MD version.
